fix: bushes on mobile view2

--- a/src/SearchPage.css
+++ b/src/SearchPage.css
@@ -273,4 +273,22 @@
     height: auto;
     filter: grayscale(100%) contrast(1.2);
   }
+
+  .bush-1 {
+    width: 200px;
+    left: 60%;
+    bottom: -10%;
+  }
+
+  .bush-2 {
+    display: none;
+  }
+
+  .tree-1 {
+    width: 200px;
+  }
+
+  .tree-2 {
+    display: none;
+  }
 }
